src/styles.scss
:root {
    --main-bg-color: #242226;
    --main-accent: #e7b351;
}

body {
    padding-top: 80px;
    font-family: 'Courier New', Courier, monospace;
    color: white;
    margin: 0;
    background-color: var(--main-bg-color);
    max-width: 100%;
    overflow-x: hidden;
}

p {
    font-size: 16px;
    line-height: 1.5;
    margin: 40px 0;
}

a {
    color: inherit;
    text-decoration: inherit;
}

@media only screen and (pointer: fine) {
    a {
        transition: color .2s;
    }

    a:hover {
        color: #bebec8;
    }
}

.article-content {
    margin-left: 10vw;
    margin-right: 10vw;
    margin-top: 20px;
    position: relative;
}

.article-title {
    display: flex;
    justify-content: center;

    margin: 20px 0;
    font-size: 14vw;
}

.article-title div {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-weight: bold;
    text-align: center;
}

.article-title div::after {
    content: "";
    display: block;
    height: 0;
    border-radius: 1px;
    border-bottom: 4px solid var(--main-accent);
    width: 100%;
}

.article-heading {
    display: flex;
    justify-content: center;
    font-size: 8vw;
    margin: 40px 0;

    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-weight: bold;
    text-align: center;
}

.article-heading div::before,
.article-heading div::after {
    content: "";
    display: block;
    height: 0;
    border-radius: 1px;
    border-bottom: 3px solid #3D3A41;
    width: 100%;
}

/* Gallery */

.snip-container {
    display: grid;
    width: 100%;

    /* Mobile */
    grid-template-columns: auto;
    gap: 16px 16px;
    
    margin: 40px 0;
}

.snip-container .cell {
    width: 100%;
    border-radius: 8px;

    transition: all .2s;
}

/* Tablet */
@media only screen and (min-width: 600px) {
    .snip-container {
        grid-template-columns: auto auto;
    }
}

/* Desktop */
@media only screen and (min-width: 900px) {
    .snip-container {
        grid-template-columns: auto auto;
    }
}

/* Expand gallery images on hover */
/* @media only screen and (pointer: fine) {
    .snip-container .cell:hover {
        transform: scale(110%);
        z-index: 2;
    }
} */

.snip-container img {
    width: 100%;
    border-radius: inherit;
}

.project-link-container {
    width: 100%;
    text-align: center;
    margin: 40px 0;
}

.project-link {
    color: white;
    text-decoration: underline;
    text-align: center;
    font-size: 24px;
    word-wrap: break-word;
}

.tech-stack-container {
    display: grid;
    grid-template-columns: auto;
}

@media only screen and (min-width: 1200px) {
    .tech-stack-container {
        grid-template-columns: 1fr 1fr;
    }
}

.logo-container {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;

    width: 100%;

    margin: 40px 0;
}

.logo-container img {
    max-height: 15vh;
    max-width: 100%;
    margin: 10px;
    border-radius: 8px;
}

/* For desktop */
@media only screen and (min-width: 900px) {
    p {
        font-size: 20px;
        margin: 60px 0;
    }
    
    .article-title {
        font-size: 120px;
        margin: 100px 0;
    }
    
    .article-heading {
        font-size: 60px;
        margin: 60px 0;
    }

    .project-link-container {
        margin: 60px 0;
    }

    .project-link {
        font-size: 40px;
    }
    
    .logo-container {
        margin: 60px 0;
    }
}

@media only screen and (pointer: coarse) {
    body::after {
        content: 'mobile';
        display: none;
    }
}

